--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: ruby
 rvm:
   - 2.1.6
-before_install: gem install bundler -v 1.11.2
-script: bundle exec rspec spec
+before_install: gem install bundler -v 1.9.5
+script: bundle exec rspec
