--- a/spec/integration/suzsnam/Gemfile
+++ b/spec/integration/suzsnam/Gemfile
@@ -3,4 +3,4 @@ source "https://rubygems.org"
 gem "pesuz", path: "../pesuz"
 gem "sqlite3"
 gem "pry"
-gem 'material_design_lite-rails'
+gem "material_design_lite-rails"
